--- a/client/src/components/FilterBar/FilterBar.module.css
+++ b/client/src/components/FilterBar/FilterBar.module.css
@@ -1,3 +1,7 @@
+.sticky {
+    position: sticky;
+    top: 24vh;
+}
 .AllBar {
     display: flex;
     flex-direction: column;
@@ -9,8 +13,6 @@
     padding: 15px;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
-    top: 23vh;
 }
 .select {
     font-family: 'Source Sans Pro', sans-serif;
