--- a/client/src/components/CardContainer/CardContainer.module.css
+++ b/client/src/components/CardContainer/CardContainer.module.css
@@ -24,15 +24,87 @@
     flex-wrap: wrap;
     margin-top: 20px;
 }
-.FilterBar {
-    position: absolute;
-    z-index: 1;
-}
 .found {
     display: grid;
-    place-items: center;
+    position: fixed;
     color: #ffffff;
-    border-radius: 100%;
+    place-items: center;
+    top: 50%;
+    left: 25%;
+}
+
+
+.loader {
+    left: 50%;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    display: inline-block;
+    border-top: 4px solid #FFF;
+    border-right: 4px solid transparent;
+    box-sizing: border-box;
+    animation:  rotation 1s linear infinite;
+}
+.loader::after {
+    content: '';  
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    border-left: 4px solid #ff3c0000;
+    border-bottom: 4px solid transparent;
+    animation:  rotation 0.5s linear infinite reverse, rotationColor 1s linear infinite;
+}
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+} 
+@keyframes rotationColor {
+    0% {
+        border-left: 4px solid #f80738;
+        transition: 1s;
+    }
+    14% {
+        border-left: 4px solid #ee7c45;
+        transition: 1s;
+    }
+    28% {
+        border-left: 4px solid #ddf456;
+        transition: 1s;
+    }
+    42% {
+        border-left: 4px solid #03fda2;
+        transition: 1s;
+    }
+    56% {
+        border-left: 4px solid #00ffff;
+        transition: 1s;
+    }
+    72% {
+        border-left: 4px solid #03fda2;
+        transition: 1s;
+    }
+    86% {
+        border-left: 4px solid #ddf456;
+        transition: 1s;
+    }
+    100% {
+        border-left: 4px solid #ee7c45;
+        transition: 1s;
+    }
+}
+
+@media (max-width: 768px) {
+    .found {
+        left: 0;
+    }
 }
 
 
